# utilix_project

./: .git_ignore  .gitignore  README.md  boot.py  pyproject.toml  setup.py
conf/: file_config_loader.py  yaml_config_loader.py
datax/: data.py
osx/: file.py  os_path.py
pythonx/: pythonx.py
src/nd_utility/conf/: basic.py  conf.yaml
src/nd_utility/conf/decorator/: decorator.py  uniqued.py
src/nd_utility/conf/factory/: uniqued_yaml_file.py
src/nd_utility/data/: yaml_adapter.py
src/nd_utility/data/storage/: convert.py  interface.py  storage.py  validator.py
src/nd_utility/git/: push_all.py
src/nd_utility/oop/klass/: klass.py
src/nd_utility/oop/objekt/: objekt.py
src/nd_utility/os/file_system/: tree.py
src/nd_utility/python/: pythonx.py
src/nd_utility/ui/: command.py  input_format.py  input_type.py  terminal.py
src/utilityx/: __main__.py
src/utilityx/conf/: basic.py  conf.py  conf_from_yaml.py  file_config_loader.py  interface.py  say.py  yaml_config_loader.py
src/utilityx/conf/decorator/: decorator.py  uniqued.py
src/utilityx/conf/factory/: uniqued_yaml_file.py
src/utilityx/data/: conversion.py  data.py  data_source.py  factory.py  format.py  source.py  storage.py  type.py  unit.py  yaml_adapter.py
src/utilityx/data/format/: conf.yaml  convert.py  format.py  format_guesser.py  model.py  yaml.py  (+1 more)
src/utilityx/git/: push_all.py
src/utilityx/os/: filesys.py  path.py
src/utilityx/osx/: file.py  os_path.py
src/utilityx/py/: py.py
src/utilityx/utilityx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/utilix/conf/: basic.py  conf.yaml  interface.py
src/utilix/data/: yaml_adapter.py
src/utilix/ui/: terminal.py
tests/: conftest.py
tests/data/storage/: test_uniformated_multi_valued_yaml_File.py
tests/internet/email/: conftest.py  test_concerete_email_address_validator.py  test_email.py  test_email_address.py  test_validator.py
tests/performance/: test_uniformated_multi_valued_yaml_File.py
(+492 files in other folders)
