[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "utilityx"
version = "1.0.0"

[project.scripts]
boot = "utilityx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short --strict-markers"

testpaths = ["tests"]