[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "utilityx"
version = "1.0.0"
dependencies = [
  "ruamel.yaml>=0.17.40,<0.18",
  # optional but faster on CPython:
  "ruamel.yaml.clib>=0.2.7; python_version<'3.13' and platform_python_implementation=='CPython'",
]

[project.scripts]
boot = "utilityx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short --strict-markers"
testpaths = ["tests"]
