[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilityx"
version = "1.0.0"
dependencies = [
  "ruamel.yaml>=0.17.40,<0.18",
  # optional but faster on CPython < 3.13:
  "ruamel.yaml.clib>=0.2.7; python_version<'3.13' and platform_python_implementation=='CPython'",
]

# for development environment: pip install -e .[dev]
[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "build>=1.2.1",     # convenience: lets you run `python -m build`
]

[tool.mypy]
python_version = "3.13"
disallow_incomplete_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = ["./src"]
namespace_packages = true
explicit_package_bases = true
files = ["utilityx", "tests"]
exclude = '(^|/)conftest\.py$'

[tool.setuptools]
package-dir = {"" = "src"}     # explicit src-layout

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short --strict-markers"
testpaths = ["tests"]